Bug 25627 - z80: [patch] Fix instruction assemble and disassemble bug
Summary: z80: [patch] Fix instruction assemble and disassemble bug
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: gas (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-03 15:45 UTC by Sergey Belyashov
Modified: 2020-03-03 16:33 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments
fix LD IY,(HL) and LD (HL),IX (1.42 KB, patch)
2020-03-03 15:45 UTC, Sergey Belyashov
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Sergey Belyashov 2020-03-03 15:45:23 UTC
Created attachment 12339 [details]
fix LD IY,(HL) and LD (HL),IX

The patch fixed invalid compilation of instruction LD IY,(HL) and disassemble of this and LD (HL),IX instruction. Also it update testsuit.
Comment 1 Nick Clifton 2020-03-03 16:33:25 UTC
Patch applied.
Comment 2 Sourceware Commits 2020-03-03 16:33:37 UTC
The master branch has been updated by Nick Clifton <nickc@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=b8ba13856360d1cae00269a0ffe291cf573bb575

commit b8ba13856360d1cae00269a0ffe291cf573bb575
Author: Sergey Belyashov <sergey.belyashov@gmail.com>
Date:   Tue Mar 3 16:31:42 2020 +0000

    The patch fixed invalid compilation of instruction LD IY,(HL) and disassemble of this and LD (HL),IX instruction. Also it update testsuit.
    
    	PR 25627
    opcodes	* z80-dis.c: Fix disassembly of LD IY,(HL) and D (HL),IX
    	instructions.
    
    gas	* config/tc-z80.c (emit_ld_rr_m): Fix invalid compilation of
    	instruction LD IY,(HL).
    	* testsuite/gas/z80/ez80_adl_all.d: Update expected disassembly.
    	* testsuite/gas/z80/ez80_adl_all.s: Add tests of the instruction.
    	* testsuite/gas/z80/ez80_z80_all.d: Update expected disassembly.
    	* testsuite/gas/z80/ez80_z80_all.s: Add tests of the instruction.