gas/testsuite/gas/z80/ez80_adl_all.s
@@ -480,7 +480,7 @@
 	ex (sp),hl
 	ex (sp),ix
 	ex (sp),iy
-	ex af,af'
+	ex af,af'	;'
 	ex de,hl
 	exx
 	halt
@@ -998,3 +998,13 @@
 	xor e
 	xor h
 	xor l
+	ld	bc,(hl)
+	ld	de,(hl)
+	ld	hl,(hl)
+	ld	ix,(hl)
+	ld	iy,(hl)
+	ld	(hl),bc
+	ld	(hl),de
+	ld	(hl),hl
+	ld	(hl),ix
+	ld	(hl),iy
